configuring evosuite